# pyproject.toml
[project]
name = "InspMethods_NIM"
version = "0.1.0"
description = "RAG application using NVIDIA NIM and LlamaIndex"
requires-python = ">=3.9"
dependencies = [
    "llama-index==0.11.15",
    "llama-index-readers-file",
    "llama-index-llms-nvidia",
    "llama-index-embeddings-nvidia",
    "python-dotenv",
    "streamlit",
    "openai",
    "pandas",
    "PyPDF2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["E501"]
