# pyproject.toml

[tool.poetry]
name = "InspMethods_NIM"
version = "0.1.0"
description = "RAG application using NVIDIA NIM and LlamaIndex"
authors = ["Ataliba Miguel <ataliba.miguel@valonylabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
llama-index = "==0.11.15"
llama-index-readers-file = "*"
llama-index-llms-nvidia = "*"
llama-index-embeddings-nvidia = "*"
python-dotenv = "*"
streamlit = "*"
openai = "*"
pandas = "*"
PyPDF2 = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"
mypy = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["E501"]
